css/main.css
@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700");

/*
*   @type css
*   @name main.css
*   @copy Copyright 2015 Harry Phillips
*/

/* override bugherd min-width */
.app-wrap, .pane-wrap {
    min-width: initial;
}

/* set transitions
------------------------------------------------------------------------------*/
.kbs-cons, .kbs-object, .kbs-object-expand {
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

/* main gui wrapper 
------------------------------------------------------------------------------*/
[class*='kbs-'] {
    box-sizing: border-box;
}

.kbs-gui {
    font-family: Open Sans;
    font-size: 18px;
}

/* gui overlay 
------------------------------------------------------------------------------*/
.kbs-overlay {
    position: fixed;
    top: 0; bottom: 0; left: 0; right: 0;
    z-index: 2147483644;
    display: none;
}

/* gui modals */
.kbs-modal {
    position: fixed;
    top: 50%; left: 50%;
    width: 600px; height: 400px;
    margin-left: -300px;
    margin-top: -200px;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
    text-align: center;
    z-index: 2147483647;
    overflow: hidden;
}

.kbs-modal-title {
    float: left;
    width: 90%; height: 40px;
    margin: 0;
    padding: 5px;
    font-size: 20px;
    text-align: left;
}

.kbs-modal.kbs-prompt {
    width: 400px; height: 200px;
    margin-left: -200px;
    margin-right: -100px;
}

.kbs-modal-msg {
    display: inline-block;
    width: 100%; height: 80px;
    padding: 10px;
    font-size: 14px;
    text-align: left;
}

.kbs-modal-close {
    float: left;
    width: 10%; height: 40px;
    margin: 0; padding: 0;
    border: solid transparent 0px;
    font-size: 22px;
    line-height: 1.6em;
    text-align: center;
    cursor: pointer;
    
    -webkit-transition: background-color 0.3s, color 0.3s, border 0.3s;
    -moz-transition: background-color 0.3s, color 0.3s, border 0.3s;
    -o-transition: background-color 0.3s, color 0.3s, border 0.3s;
    transition: background-color 0.3s, color 0.3s, border 0.3s;
}

.kbs-modal-close:hover {
    border-bottom: solid #ff0000 40px;
}

.kbs-confirm,
.kbs-cancel {
    width: 100px; height: 30px;
    margin: 0 2px;
    border: solid transparent 0px;
    padding: 5px 15px;
    text-align: center;
    font-size: 14px;
    cursor: pointer;
    
    -webkit-transition: background-color 0.3s, color 0.3s, border 0.3s;
    -moz-transition: background-color 0.3s, color 0.3s, border 0.3s;
    -o-transition: background-color 0.3s, color 0.3s, border 0.3s;
    transition: background-color 0.3s, color 0.3s, border 0.3s;
}

.kbs-confirm:hover {
    border-bottom: ;
}

.kbs-cancel:hover {
    border-bottom: ;
}

/* gui console wrapper 
------------------------------------------------------------------------------*/
.kbs-cons-box {
    position: fixed;
    top: 0; right: 0;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
    z-index: 2147483646;
    overflow: hidden;
    -webkit-transition: width 0.3s, height 0.3s 0.3s, border 0.3s;
    -moz-transition: width 0.3s, height 0.3s 0.3s, border 0.3s;
    -o-transition: width 0.3s, height 0.3s 0.3s, border 0.3s;
    transition: width 0.3s, height 0.3s 0.3s, border 0.3s;
}

/* console status */
.kbs-cons-box.kbs-open {
    width: 50%; height: 65%;
    border-top: 0;
    border-right: 0;
    border-radius: 0 0 0 10px;
}

.kbs-cons-box.kbs-full {
    width: 100%; height: 100%;
    border-radius: 0px;
}

.kbs-cons-box.kbs-close {
    width: 30px; height: 30px;
    min-width: 30px; min-height: 30px;
    border-radius: 0px;
    -webkit-transition: width 0.3s 0.3s, height 0.3s, border 0.3s;
    -moz-transition: width 0.3s 0.3s, height 0.3s, border 0.3s;
    -o-transition: width 0.3s 0.3s, height 0.3s, border 0.3s;
    transition: width 0.3s 0.3s, height 0.3s, border 0.3s;
}

/* console toolbar 
------------------------------------------------------------------------------*/
.kbs-cons-toolbar {
    position: relative;
    box-shadow: 0 0 4px rgba(0,0,0, 0.4);
    text-align: right;
    z-index: 2147483647;
}

/* console title */
.kbs-cons-title {
    margin-top: 3px;
    text-align: left;
    float: left;
}

.kbs-cons-box.kbs-close .kbs-cons-title {
    display: none;
}

/* console tool btn */
.kbs-tool {
    display: inline-block;
    width: 30px; height: 30px;
    margin: 0; padding: 0;
    border-bottom: solid transparent 0px;
    line-height: 1.6em;
    text-align: center;
    cursor: pointer;
    
    -webkit-transition: background-color 0.3s, color 0.3s, border 0.3s;
    -moz-transition: background-color 0.3s, color 0.3s, border 0.3s;
    -o-transition: background-color 0.3s, color 0.3s, border 0.3s;
    transition: background-color 0.3s, color 0.3s, border 0.3s;
}

/* console output wrapper
------------------------------------------------------------------------------*/
.kbs-cons {
    position: absolute;
    top: 30px; bottom: 0;
    left: 0; right: 0;
    overflow-y: scroll;
    overflow-x: hidden;
}

/* console out content */
.kbs-cons-out {
    position: relative;
    padding: 0;
    font-family: Courier New;
    font-size: 12px;
    -webkit-transition: font-size 0.3s;
    -moz-transition: font-size 0.3s;
    -o-transition: font-size 0.3s;
    transition: font-size 0.3s;
}

/* console log nodes
------------------------------------------------------------------------------*/
/* individual log node */
.kbs-log-node {
    padding: 6px;
    font-weight: 300;
    text-transform: initial;
    word-break: break-all;
    white-space: normal;
    overflow: hidden;
}

/* log context */
.kbs-log-context {}

.kbs-log-context-expand {
    position: absolute;
    top: -10px; right: 0;
    background: lime;
    width: 10px; height: 10px;
}

/* sub log context */
.kbs-log-node .kbs-log-context {
    margin-top: 5px;
    border: solid #000 1px;
}

.kbs-log-close {
    height: 25px;
}

/* object log node */
.kbs-object {
    position: relative;
    height: 150px;
    margin: 0;
    margin: 3px;
    padding: 10px;
    font-family: Courier New;
    font-size: 1em;
    letter-spacing: 1px;
    line-height: 1.3em;
    overflow-y: scroll;
}

.kbs-object.kbs-expand {
    height: 450px;
}

.kbs-object-expand {
    position: relative;
    top: 2px;
    margin-right: 10px;
    font-size: 16px;
    cursor: pointer;
}

.kbs-object-expand.kbs-rotate {
    top: 3px;
}

.kbs-exec {
    font-weight: 800;
    text-transform: uppercase;
}

/* togglable nodes */
.kbs-exec, .kbs-test {
    cursor: pointer !important;
}

.kbs-exec .kbs-test {
    border-bottom: solid #000 1px;
}

.kbs-exec .kbs-log-node,
.kbs-test .kbs-log-node {
    cursor: default;
}

/* misc classes
------------------------------------------------------------------------------*/
.kbs-rotate {
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -o-transform: rotate(90deg);
    transform: rotate(90deg);
}

/* kbs bugherd classes
------------------------------------------------------------------------------*/
/* task details expand */
.kbs-details-expand {
    position: fixed;
    top: 60px; bottom: 60px;
    left: 60px; right: 60px;
    width: initial; height: initial !important;
    z-index: 2147483645;
}

/* task details close btn */
.kbs-details-close {
    background-color: #e82626;
    color: #fff;
    position: fixed;
    top: 45px; right: 45px;
    width: 30px; height: 30px;
    margin: 0; padding: 0;
    border-bottom: solid transparent 0px;
    line-height: 1.3em;
    font-size: 21px;
    text-align: center;
    z-index: 2147483645;
    display: none;
    cursor: pointer;
    
    -webkit-transition: background-color 0.3s, color 0.3s, border 0.3s;
    -moz-transition: background-color 0.3s, color 0.3s, border 0.3s;
    -o-transition: background-color 0.3s, color 0.3s, border 0.3s;
    transition: background-color 0.3s, color 0.3s, border 0.3s;
}

.kbs-details-close:hover {
    background-color: #fff;
    color: #fff;
    border-bottom: solid #728A97 30px;
}

/* description entry boxes */
.kbs-details-expand .taskDescription,
.kbs-details-expand .taskDescriptionHolder {
    position: relative !important;
    width: inherit !important; min-height: 100px !important;
}

/* force near full-width */
.kbs-details-expand .taskDescription:focus {
    width: 99% !important;
}

/* task meta data container */
.kbs-details-expand .flexHeight {
    position: relative;
}

/* task details overflow and scrolling fixes */
.kbs-details-expand > div:first-child {
    position: relative;
}

.kbs-details-expand .taskDetailContent {
    position: relative;
}

/* fixed alterations */
#kanbanBoard {
    min-width: initial;
}

/* responsive media queries
------------------------------------------------------------------------------*/
@media (max-width:1100px) {
    /* hide the left side pane */
    #settingsBar { display: none; }
    
    /* stretch task board to left side */
    #tasks { left: 0px; }
}

@media (max-width:940px) {
    /* maximise task board */
    #tasks { right: 0px; }
    
    /* minify details pane */
    .pane.pane-right { width: 0px; }
    
    /* shrink new task btn wrapper */
    #header .pane-right {
        width: auto;
    }
    
    /* shrink new task btn */
    .button-newIssue {
        width: auto !important;
        float: right;
    }
}

@media (max-width:804px) {
    /* remove integrations control link */
    .nav.main-nav li:nth-child(3),
    .nav.main-nav li:nth-child(4){
        display: none;
    }
    
    /* remove new task button */
    #header .pane-right  {
        display: none;
    }
}

@media (max-width:647px) {
    .searchbarHolder {
        display: none;
    }
    
    .head-actions {
        right: initial;
    }
    
    .user-menu {
        display: none !important;
    }
}

